--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -1,17 +1,27 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:400,500,700&display=swap');
+
+* {
+    margin: 0;
+    padding: 0;
+}
+
+body, input, select, textarea, button {
+    font-family: sans-serif;
+    font-size: 1em;
+}
+
 .register-container{
     width: 100%;
     max-width: 1300px;
     height: 890px;
-    margin: -20px;
-
-
+    
     display: flex;
     align-items: initial;
     justify-content: center; 
     background-color:#E3DEDE ;
+    position: relative;
     
 }
-
 
 
 .register-container-initial{
@@ -21,6 +31,11 @@
     align-items: center;
     justify-content: left ;
     display: flex;
+    
+
+}
+.input{
+    font: 400 14px Roboto, sans-serif
 }
 
 
@@ -37,12 +52,17 @@
     float: right;
     margin-left: 25px;
 }
-.register-container-initial .right-form input{
+.register-container-initial .right-form .inputs{
+    margin-top: -18px;
+    margin-bottom: 8px;
+}
+
+.register-container-initial .right-form .inputs input{
     margin-bottom: 10px;
 }
 
-.register-container-initial .checkBoxes input{
-    margin-top: 28px;
+.register-container-initial .right-form .checkBoxes input{
+    margin-top: 20px;
 
 }
 
@@ -99,10 +119,11 @@
 
 .buttonRegister{
     position: absolute;
-    width: 138px;
-    height: 28px;
-    left: 1032px;
-    top: 822px;
+    width: 160px;
+    height: 40px;
+    right: 80px;
+    bottom: 100px;
+    font-size: 27px;
 }
 
 .buttonSearchCEPB{
