--- a/src/pages/Dashboard/styles.css
+++ b/src/pages/Dashboard/styles.css
@@ -6,6 +6,7 @@
 .dashboard-header {
     min-width: 1080px;
     margin-top: -25px;
+    margin-left: -10px;
     width: 1920px; 
     height: 106px;
     background-color: #F37F2B;
