changes table add filters

--- a/src/components/table/styles.css
+++ b/src/components/table/styles.css
@@ -1,9 +1,10 @@
-thead {color:green;}
-tbody {color:blue;}
-tfoot {color:red;}
+thead {color:black;}
+tbody {color:black;}
+tfoot {color:black;}
 
 table, th, td {
   border: 1px solid black;
+  margin-left: 10%;
 }
 td, th{
   padding: 5px;
