--- a/src/pages/Register/styles.css
+++ b/src/pages/Register/styles.css
@@ -121,6 +121,10 @@
     float: left;
     margin-left: 15px;
 }
+.right-form-address{
+    float: right;
+    margin-left: 15px;
+}
 
 .register-container-seller{
     margin-top: 30px;
