--- a/src/pages/Profile/styles.css
+++ b/src/pages/Profile/styles.css
@@ -8,7 +8,7 @@
     margin-left: -10px;
     width: 1920px; 
     height: 106px;
-    background-color: #F37F2B;
+    background-color:#E6A800;
 }
 .header-menu{
     position: absolute;
@@ -16,7 +16,7 @@
     height: 50px;
     top: 100px;
     left: 0px;
-    background-color: #E26B15;
+    background-color: #7030a0;
 
 }
 
